@@ -1,5 +1,11 @@
 2002-10-26  Havoc Pennington  <hp@pobox.com>
 
+	* src/xprops.c (meta_prop_get_text_property): new function
+	(meta_prop_get_wm_hints): new function
+	(meta_prop_get_class_hint): new function
+
+2002-10-26  Havoc Pennington  <hp@pobox.com>
+
 	* src/window.c (meta_window_new): use multi-value-get on a couple
 	of properties for testing
 
